--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Entry</h1>
-
+<div class="columns is-centered mt-6"> 
+    <div class ="column is-one-third">
+        <h2 class="is-size-2 has-text-weight-bold mb-3">Editing Entry</h2>
 <%= render 'form', entry: @entry %>
+    </div>
+</div>
 
-<%= link_to 'Show', @entry %> |
-<%= link_to 'Back', entries_path %>
+
+
+
+
