--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Entry</h1>
-
+<div class="columns is-centered mt-6"> 
+    <div class ="column is-one-third">
+        <h2 class="is-size-2 has-text-weight-bold mb-3">New Entry</h2>
 <%= render 'form', entry: @entry %>
+    </div>
+</div>
 
-<%= link_to 'Back', entries_path %>
+
+
+
+
