--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -30,5 +30,9 @@
    </div>
    </div>
     <% end %>
+    </div>
  
 
+<div class="columns is-centered mt-6">
+  <%=link_to "View all entries", archives_index_path, class:"button is-link is-outlined is-centered" %>
+</div>
