--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -24,12 +24,17 @@
       </div> 
 
     </nav>
-    </div>
-  </div>
+
 
 <div class="columns is-mobile">
   <div class="is-column">
 <%= link_to 'Edit', edit_entry_path(@entry), class: "button is-gray" %> 
 <%= link_to 'Delete', entry_path(@entry), method: :delete, data: {confirm:'Are you sure?'}, class:"button is-gray" %>
 </div>
+
 </div>
+<div class="column">
+
+</div>
+    </div>
+  </div>
